# Rootdata-MCP-Python

./: .env.example  README.md  main.py  pyproject.toml  rootdata_server_cloudflare.py  rootdata_server_sse.py  rootdata_server_stdio.py
examples/: rootdata_client_openai.py  rootdata_client_sse.py  rootdata_client_stdio.py
